maze.wallfollower.WallFollowerMaze.scala.error
Erreur de compilation :
WallFollowerMaze:12: error: not found: value north
  setDirection(north)
               ^